Added search filter in academies part

--- a/Client/index.html
+++ b/Client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://static.vecteezy.com/system/resources/thumbnails/013/366/674/small/foot-ball-or-soccer-ball-icon-symbol-for-art-illustration-logo-website-apps-pictogram-news-infographic-or-graphic-design-element-format-png.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dribble</title>
   </head>
